# SnowskyOS

./: .gitignore  Cargo.toml  README.md  linker.ld  memory.x  rust-toolchain.toml
.cargo/: config.toml
sim/: Cargo.toml
sim/.cargo/: config.toml
sim/src/: cassette_ui.rs  framebuffer.rs  main.rs
src/: lib.rs  main.rs
src/audio/: cs43131.rs  engine.rs  mod.rs
src/boot/: image.rs  mod.rs
src/clock/: mod.rs  pll.rs
src/display/: framebuffer.rs  lcd.rs  mod.rs
src/hal/: dma.rs  gpio.rs  i2c.rs  i2s.rs  interrupt.rs  mmio.rs  mod.rs  spi.rs
src/input/: buttons.rs  mod.rs
src/mem/: allocator.rs  dma_buffer.rs  mod.rs
src/ui/: cassette.rs  mod.rs
tools/: pack_firmware.py
